# antialiasingdemo

./: .gitignore  CMakeLists.txt  Display.cpp  README.md  Shader.cpp  main.cpp  math.cpp  object_data.cpp
header/: Display.h  Shader.h  object_data.h
include/: math_make.h
include/glew-2.1.0/: glew.pc
shader/: shader.frag  shader.vert
