cmake_minimum_required(VERSION 3.10)
project(antialiasing)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_subdirectory("glfw-3.4")
include_directories("glfw-3.4/include")
include_directories("glfw-3.4/deps/glad")
file(GLOB_RECURSE GLFW_INCLUDE ".glfw-3.4/include/*.h")
file(GLOB_RECURSE GLFW_DEPS ".glfw-3.4/deps/*.h")
find_package(OpenGL REQUIRED)
add_executable(main main.cpp  ${GLFW_FILES} ${GLFW_DEPS})
target_link_libraries(main PUBLIC glfw)
